@@ -1,6 +1,9 @@
 Camlp5 Version 4.06:
 ---------------------
 
+* [18 Jul 07] In Grammar module, added type 'parsable', functions 'parsable'
+  and 'Entry.parse_parsable' like for the functorial interface.
+
 Camlp5 Version 4.05:
 ---------------------
 
